30_applications/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    gateway.networking.k8s.io/public-routes: "true"
