30_applications/paperless/paperless_gotenberg_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  namespace: paperless
  labels:
    app.kubernetes.io/name: "paperless"
    app.kubernetes.io/instance: "paperless"
    app.kubernetes.io/component: "gotenberg"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "paperless"
      app.kubernetes.io/instance: "paperless"
      app.kubernetes.io/component: "gotenberg"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "paperless"
        app.kubernetes.io/instance: "paperless"
        app.kubernetes.io/component: "gotenberg"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: gotenberg
          image: docker.io/gotenberg/gotenberg:8.37.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
          command:
            - "gotenberg"
          args:
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
          resources:
            requests:
              memory: "250Mi"
              cpu: "25m"
            limits:
              memory: "300Mi"
              cpu: "50m"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
