30_applications/paperless/paperless_server_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-server
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/component: server
spec:
  parentRefs:
    - name: public
      namespace: ingress
      sectionName: https-wildcard
  hostnames:
    - "paperless.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: paperless-server
          port: 8000
