30_applications/paperless/paperless_server_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-server
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/component: server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress
      namespace: ingress
      sectionName: https
  hostnames:
    - "paperless.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 10m
      backendRefs:
        - group: ""
          kind: Service
          name: paperless-server
          port: 8000
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: paperless-server-request-buffer
  namespace: paperless
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: paperless-server
  requestBuffer:
    limit: 100Mi
